# Stubby_Manager

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  Stubby.icns  config.cpp  config.h  configmanager.cpp  configmanager.h  env.bat  logmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netprofile_defaults.yml  networkinterface.hpp  networklist.ui  networklistfilterproxymodel.cpp  networklistfilterproxymodel.h  networkmanager.cpp  networkmanager.h  networkprofile.cpp  networkprofile.h  networkprofiledelegate.cpp  networkprofiledelegate.h  networkprofiletablemodel.cpp  networkprofiletablemodel.h  networkprofilewidget.cpp  networkprofilewidget.h  networkprofilewidget.ui  networks.cpp  networks.h  networkslistwidget.cpp  networkslistwidget.h  networkswidget.cpp  networkswidget.h  networkswidget.ui  networkswidgetfilterproxymodel.cpp  (+21 more)
cmake/modules/: FindLibctemplate.cmake
os/linux/: configmanager_linux.cpp  configmanager_linux.h  logmanager_linux.cpp  logmanager_linux.h  networkmanager_linux.cpp  networkmanager_linux.h  servicemanager_linux.cpp  servicemanager_linux.h
os/macos/: configmanager_macos.cpp  configmanager_macos.h  logmanager_macos.cpp  logmanager_macos.h  networkmanager_macos.cpp  networkmanager_macos.h  runtask_macos.cpp  runtask_macos.h  servicemanager_macos.cpp  servicemanager_macos.h  systemdnsmanager_macos.cpp  systemdnsmanager_macos.h
os/windows/: StubbyManager.xml  StubbySetDns.ps1  configmanager_windows.cpp  configmanager_windows.h  exceptions_windows.h  logmanager_windows.cpp  logmanager_windows.h  networkinterface_windows.cpp  networkinterface_windows.hpp  networkmanager_windows.cpp  networkmanager_windows.h  servicemanager_windows.cpp  servicemanager_windows.h  stubbygui.rc.in  stubbygui.wxs  systemdnsmanager_windows.cpp  systemdnsmanager_windows.h  windows_package_version.in
utils/: env-debug.bat  env-release.bat
